toc bug, delete whitespace nowrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ header,header.a{
   overflow-x: auto;
   word-wrap: normal;
   word-break: break-all;
-  white-space: nowrap;
+  #white-space: nowrap;
 }
 
 #TableOfContents ul {
